docs/api/qiskit/0.37/qiskit.primitives.BaseEstimator.mdx
---
title: BaseEstimator (v0.37)
description: API reference for qiskit.primitives.BaseEstimator in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.BaseEstimator
---

# BaseEstimator

<Class id="qiskit.primitives.BaseEstimator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/primitives/base_estimator.py" signature="BaseEstimator(circuits: Iterable[QuantumCircuit] | QuantumCircuit, observables: Iterable[SparsePauliOp] | SparsePauliOp, *args, parameters: Iterable[Iterable[Parameter]] | None = None, **kwargs)" modifiers="class">
  Bases: `abc.ABC`

  Estimator base class.

  Base class for Estimator that estimates expectation values of quantum circuits and observables.

  Creating an instance of an Estimator, or using one in a `with` context opens a session that holds resources until the instance is `close()` ed or the context is exited.

  **Parameters**

  *   **circuits** – Quantum circuits that represent quantum states.
  *   **observables** – Observables.
  *   **parameters** – Parameters of quantum circuits, specifying the order in which values will be bound. Defaults to `[circ.parameters for circ in circuits]` The indexing is such that `parameters[i, j]` is the j-th formal parameter of `circuits[i]`.

  **Raises**

  **QiskitError** – For mismatch of circuits and parameters list.

  ## Methods

  <span id="qiskit-primitives-baseestimator-close" />

  ### close

  <Function id="qiskit.primitives.BaseEstimator.close" signature="BaseEstimator.close()" modifiers="abstract">
    Close the session and free resources
  </Function>

  ## Attributes

  ### circuits

  <Attribute id="qiskit.primitives.BaseEstimator.circuits">
    Quantum circuits that represents quantum states.

    **Returns**

    The quantum circuits.
  </Attribute>

  ### observables

  <Attribute id="qiskit.primitives.BaseEstimator.observables">
    Observables to be estimated.

    **Returns**

    The observables.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.primitives.BaseEstimator.parameters">
    Parameters of the quantum circuits.

    **Returns**

    Parameters, where `parameters[i][j]` is the j-th parameter of the i-th circuit.
  </Attribute>
</Class>

